fix alignment for smaller aspect ratios

--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -256,3 +256,13 @@
      font-size: 5em;
   }
 }
+
+@media screen and (max-width: 1180px){
+  .side-bar {
+    text-align: left;
+    padding-left: 90px;
+  }
+  .sub-content {
+    padding-left: 50px;
+  }
+}
